@@ -1,5 +1,5 @@
 //
-// MainWindow.cs: Main window of the app.
+// EditorWindow.cs: Main window of the app.
 //
 // Author:
 //   Hector E. Gomez M (hectorgm@ciencias.unam.mx)
@@ -31,6 +31,22 @@ public partial class EditorWindow : Gtk.Window {
 	protected virtual void OnOpenActivated(object sender, System.EventArgs e)
 	{
 		OpenDocDialog dialog = new OpenDocDialog ();
+		
+		ResponseType rsp = (ResponseType) dialog.Run ();
+		
+		if (rsp == ResponseType.Accept) {
+			dialog.Hide();
+			MessageDialog md = new MessageDialog (this,
+				DialogFlags.DestroyWithParent,
+				MessageType.Info,
+				ButtonsType.Ok,
+				string.Format("Hellooooo!"));
+				
+				md.Run ();
+				md.Destroy();
+		}
+		
+		dialog.Destroy();
 	}
 }
 }
